#10 Fix overflowX

--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@ body {
   font-family: 'Raleway', sans-serif;
   background-image: linear-gradient(to top right, #96E6A1, #D4FC79);
   background-attachment: fixed;
-  overflow: hidden;
+  overflowX: hidden;
 }
 
 .App {
